# SrsBotv2

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: bot.py  main.py  secret.txt
